CB-25920 HMS rds config provider should be consolidated
- separated HMS RDS config provider regarding CDL have been removed
- RdsConfig for HMS (regarding VM form DL and CDL also) is configured
during DH provision via `SharedServiceConfigProvider`
- using remotr data context to get HMS database information, if there is
no RdsConfig for it (only should happen for CDL), then we are persisting
it, and setting the RdsConfig for the cluster
- thunderhead-mock extended with cdl and svc discovery functionality,
readme added to use mock cdl
- thunderhead mock also extended with H2 database to store CDL related
data (especially needed for remote data context)
- HMS database config refresh during cluster start also relying on
remote data context
- This commit does not contain secrets